fix translation list layout and spacing

--- a/themes/bdev/assets/sass/layouts/single.scss
+++ b/themes/bdev/assets/sass/layouts/single.scss
@@ -16,5 +16,13 @@
     span {
         margin-right: .5rem;
     }
+
+    ul {
+        display: flex;
+
+        li {
+            margin-right: .5rem;
+        }
+    }
   }
 }
